third_party/move/move-compiler-v2/tests/ability-check/v1-signer/copy_loc_transitive.exp

Diagnostics:
error: local `x` of type `M::S<signer>` does not have the `copy` ability
  ┌─ tests/ability-check/v1-signer/copy_loc_transitive.move:5:9
  │
5 │         copy x
  │         ^^^^^^ explicitly copied here
